EditGlossaryWindow: add tooltip for duplicates

--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/EditGlossaryWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/EditGlossaryWindow.xaml
@@ -120,6 +120,8 @@
                         <!-- Highlight duplicate rows -->
                         <DataTrigger Binding="{Binding HasErrors}"
                                      Value="True">
+                            <Setter Property="ToolTip"
+                                    Value="{Binding Error}" />
                             <Setter Property="Background"
                                     Value="Yellow" />
                         </DataTrigger>
