DeepL 7.0.12: CRQ-37410 - Glossary Import Problem in DeepL Plugin 6.1.3.2 Trados Studio 2022 SR2 (#1607)
* Add source and target columns validation

* ...

* EditGlossaryWindow: add validation for missing source or targat AND duplicates

* Fix issues with "EditGlossaryWindow: add validation for missing source or targat AND duplicates"

* EditGlossaryWindow: add tooltip for duplicates

* Increase version to 7.0.1.3

* Add GlobalSettings to persist latest used glossaries

--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/EditGlossaryWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/EditGlossaryWindow.xaml
@@ -6,9 +6,10 @@
         xmlns:local="clr-namespace:Sdl.Community.DeepLMTProvider.UI"
         xmlns:controls="clr-namespace:Sdl.Community.DeepLMTProvider.UI.Controls"
         xmlns:uiHelpers="clr-namespace:Sdl.Community.DeepLMTProvider.UI.UiHelpers"
+        xmlns:deepLmtProvider="clr-namespace:Sdl.Community.DeepLMTProvider"
         mc:Ignorable="d"
         MaxWidth="600"
-        MaxHeight="900"
+        MaxHeight="600"
         MinHeight="600"
         Icon="../Resources/deepL_logo_new.png"
         WindowStartupLocation="CenterScreen"
@@ -97,7 +98,7 @@
 
             <controls:ClearButtonTextBox x:Name="ClearButtonTextBox"
                                          Text="{Binding FilterQuery, ElementName=EditGlossary_Window, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                         HorizontalAlignment="Right"/>
+                                         HorizontalAlignment="Right" />
         </DockPanel>
 
         <DataGrid Grid.Row="2"
@@ -111,6 +112,34 @@
                   Style="{StaticResource Sdl.DataGrid.GenericStyle}"
                   IsReadOnly="False"
                   ItemsSource="{Binding GlossaryEntries, ElementName=EditGlossary_Window}">
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="DataContext"
+                            Value="{Binding}" />
+                    <Style.Triggers>
+                        <!-- Highlight duplicate rows -->
+                        <DataTrigger Binding="{Binding HasErrors}"
+                                     Value="True">
+                            <Setter Property="ToolTip"
+                                    Value="{Binding Error}" />
+                            <Setter Property="Background"
+                                    Value="Yellow" />
+                        </DataTrigger>
+                        <!-- Show tooltips for validation errors -->
+                        <Trigger Property="Validation.HasError"
+                                 Value="True">
+                            <Setter Property="ToolTip"
+                                    Value="{Binding Error}" />
+                            <Setter Property="Background"
+                                    Value="LightPink" />
+                            <Setter Property="BorderBrush"
+                                    Value="Red" />
+                            <Setter Property="BorderThickness"
+                                    Value="2" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.RowStyle>
 
             <DataGrid.InputBindings>
                 <KeyBinding Key="Enter"
@@ -124,7 +153,7 @@
                                         Header="Source terms">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <controls:EditableTextBlock Text="{Binding SourceTerm, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            <controls:EditableTextBlock Text="{Binding SourceTerm, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged,NotifyOnValidationError=True, ValidatesOnDataErrors=True}"
                                                         IsEditing="{Binding IsEditing, ElementName=EditGlossary_Window}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -133,7 +162,7 @@
                                         Header="Target terms">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <controls:EditableTextBlock Text="{Binding TargetTerm, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            <controls:EditableTextBlock Text="{Binding TargetTerm, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged,NotifyOnValidationError=True, ValidatesOnDataErrors=True}"
                                                         IsEditing="{Binding IsEditing, ElementName=EditGlossary_Window}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -155,6 +184,7 @@
             <Button DockPanel.Dock="Right"
                     Margin="0 5 0 0"
                     Name="Apply_Button"
+                    ToolTipService.ShowOnDisabled="True"
                     IsDefault="True"
                     Click="ApplyButton_Click"
                     Style="{StaticResource Sdl.Button.PrimaryStyle}"
@@ -174,8 +204,17 @@
                     VerticalAlignment="Bottom"
                     HorizontalAlignment="Center"
                     ToolTip="Import entries from another glossary (Alt+Q)">
-                <Image Source="../Resources/deepl_Importentries.ico" Height="16"/>
+                <Image Source="../Resources/deepl_Importentries.ico"
+                       Height="16" />
             </Button>
+            <Button DockPanel.Dock="Right"
+                    x:Name="ValidateButton"
+                    Command="{Binding ValidateCommand, ElementName=EditGlossary_Window}"
+                    IsDefault="True"
+                    ToolTip="{x:Static deepLmtProvider:PluginResources.ValidateButton_ToolTip}"
+                    Margin="0 5 5 0"
+                    Style="{StaticResource Sdl.Button.GeneralStyle}"
+                    Content="Highlight issues" />
         </DockPanel>
     </Grid>
 </Window>
