--- a/DSI Viewer/Sdl.Community.SdiViewer/View/DsiViewerView.xaml
+++ b/DSI Viewer/Sdl.Community.SdiViewer/View/DsiViewerView.xaml
@@ -6,6 +6,7 @@
              xmlns:dsiViewer="clr-namespace:Sdl.Community.DsiViewer"
              xmlns:viewModel="clr-namespace:Sdl.Community.DsiViewer.ViewModel"
              xmlns:converters="clr-namespace:Sdl.Community.DsiViewer.Converters"
+             xmlns:view="clr-namespace:Sdl.Community.DsiViewer.View"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800"
@@ -376,99 +377,17 @@
 
             <StackPanel Grid.Row="10">
 
-                <Border BorderThickness="1 1 2 2"
-                        BorderBrush="#D3D3D3"
-                        Margin="18 5">
-                    <Border.Visibility>
+                <view:TqeCard TqeData="{Binding TranslationOriginData}">
+                    <view:TqeCard.Visibility>
                         <MultiBinding Converter="{StaticResource MultiBooleanToVisibilityConverter}"
                                       Mode="TwoWay"
                                       UpdateSourceTrigger="PropertyChanged">
                             <Binding Path="IsQualityEstimationVisible" />
                             <Binding Path="SegmentHasCurrentQualityEstimation" />
                         </MultiBinding>
-                    </Border.Visibility>
-                    <Grid Grid.Row="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
+                    </view:TqeCard.Visibility>
+                </view:TqeCard>
 
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <Label Grid.Row="2"
-                               Grid.Column="0"
-                               Target="{Binding ElementName=System}"
-                               VerticalAlignment="Center">
-                            <AccessText>_System</AccessText>
-                        </Label>
-
-                        <Label Grid.Row="3"
-                               Grid.Column="0"
-                               Target="{Binding ElementName=QECurrentValue}"
-                               VerticalAlignment="Center">
-                            <AccessText>_Quality Estimation:</AccessText>
-                        </Label>
-
-                        <Label Grid.Row="4"
-                               Grid.Column="0"
-                               Target="{Binding ElementName=ModelCurrentValue}"
-                               VerticalAlignment="Center">
-                            <AccessText>_Model:</AccessText>
-                        </Label>
-
-
-
-                        <TextBlock Grid.Row="0"
-                                   Grid.Column="0"
-                                   Grid.ColumnSpan="2"
-                                   Name="SystemDescription"
-                                   TextWrapping="Wrap"
-                                   Text="{Binding TranslationOriginData.Description}"
-                                   Focusable="True"
-                                   Margin="5 0 5 0"
-                                   VerticalAlignment="Center" />
-
-                        <Separator Grid.Row="1"
-                                   Grid.Column="0"
-                                   Grid.ColumnSpan="2" />
-
-                        <TextBlock Grid.Row="2"
-                                   Grid.Column="1"
-                                   Name="QESystem"
-                                   Text="{Binding TranslationOriginData.System}"
-                                   Focusable="True"
-                                   HorizontalAlignment="Right"
-                                   Margin="0 0 5 0"
-                                   VerticalAlignment="Center" />
-
-                        <TextBlock Grid.Row="3"
-                                   Grid.Column="1"
-                                   Name="QECurrentValue"
-                                   Text="{Binding TranslationOriginData.QualityEstimation}"
-                                   AutomationProperties.Name="{Binding TranslationOriginData.AccessibilityQELabel}"
-                                   Focusable="True"
-                                   Margin="0 0 5 0"
-                                   HorizontalAlignment="Right"
-                                   VerticalAlignment="Center" />
-
-                        <TextBlock Grid.Row="4"
-                                   Grid.Column="1"
-                                   Name="ModelCurrentValue"
-                                   Text="{Binding TranslationOriginData.Model}"
-                                   AutomationProperties.Name="{Binding TranslationOriginData.AccessibilityModelLabel}"
-                                   Focusable="True"
-                                   Margin="0 0 5 0"
-                                   HorizontalAlignment="Right"
-                                   VerticalAlignment="Center" />
-
-                    </Grid>
-                </Border>
                 <Expander>
                     <Expander.Visibility>
                         <MultiBinding Converter="{StaticResource MultiBooleanToVisibilityConverter}">
@@ -488,87 +407,9 @@
                         <ItemsControl.ItemTemplate>
 
                             <DataTemplate>
-                                <Border BorderThickness="1 1 2 2"
-                                        BorderBrush="#D3D3D3"
-                                        Margin="18 5">
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
 
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                        </Grid.RowDefinitions>
+                                <view:TqeCard TqeData="{Binding .}"/>
 
-                                        <Label Grid.Row="2"
-                                               Grid.Column="0"
-                                               Target="{Binding ElementName=System}"
-                                               VerticalAlignment="Center">
-                                            <AccessText>_System</AccessText>
-                                        </Label>
-
-                                        <Label Grid.Row="3"
-                                               Grid.Column="0"
-                                               Target="{Binding ElementName=QECurrentValue}"
-                                               VerticalAlignment="Center">
-                                            <AccessText>_Quality Estimation:</AccessText>
-                                        </Label>
-
-                                        <Label Grid.Row="4"
-                                               Grid.Column="0"
-                                               Target="{Binding ElementName=ModelCurrentValue}"
-                                               VerticalAlignment="Center">
-                                            <AccessText>_Model:</AccessText>
-                                        </Label>
-
-
-                                        <TextBlock Grid.Row="0"
-                                                   Grid.Column="0"
-                                                   Grid.ColumnSpan="2"
-                                                   TextWrapping="Wrap"
-                                                   Text="{Binding Description}"
-                                                   Focusable="True"
-                                                   Margin="5 0 5 0"
-                                                   VerticalAlignment="Center" />
-
-                                        <Separator Grid.Row="1"
-                                                   Grid.Column="0"
-                                                   Grid.ColumnSpan="2" />
-
-                                        <TextBlock Grid.Row="2"
-                                                   Grid.Column="1"
-                                                   Text="{Binding System}"
-                                                   Focusable="True"
-                                                   HorizontalAlignment="Right"
-                                                   Margin="0 0 5 0"
-                                                   VerticalAlignment="Center" />
-
-                                        <TextBlock Grid.Row="3"
-                                                   Grid.Column="1"
-                                                   Text="{Binding QualityEstimation}"
-                                                   AutomationProperties.Name="{Binding AccessibilityQELabel}"
-                                                   Focusable="True"
-                                                   Margin="0 0 5 0"
-                                                   HorizontalAlignment="Right"
-                                                   VerticalAlignment="Center" />
-
-                                        <TextBlock Grid.Row="4"
-                                                   Grid.Column="1"
-                                                   Text="{Binding Model}"
-                                                   AutomationProperties.Name="{Binding AccessibilityModelLabel}"
-                                                   Focusable="True"
-                                                   Margin="0 0 5 0"
-                                                   HorizontalAlignment="Right"
-                                                   VerticalAlignment="Center" />
-
-                                    </Grid>
-
-                                </Border>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
 
