Fix QE system not shown

--- a/DSI Viewer/Sdl.Community.SdiViewer/View/DsiViewerView.xaml
+++ b/DSI Viewer/Sdl.Community.SdiViewer/View/DsiViewerView.xaml
@@ -401,7 +401,7 @@
                     </Expander.Header>
 
                     <ItemsControl HorizontalAlignment="Stretch"
-                                  ItemsSource="{Binding TranslationOriginData2}"
+                                  ItemsSource="{Binding PreviousTranslationOriginData}"
                                   HorizontalContentAlignment="Stretch">
 
                         <ItemsControl.ItemTemplate>
