--- a/DSI Viewer/Sdl.Community.SdiViewer/View/TqeCard.xaml
+++ b/DSI Viewer/Sdl.Community.SdiViewer/View/TqeCard.xaml
@@ -66,7 +66,7 @@
             <TextBlock Grid.Row="2"
                        Grid.Column="1"
                        Name="QESystem"
-                       Text="{Binding System}"
+                       Text="{Binding TqeData.System, ElementName=Root}"
                        Focusable="True"
                        HorizontalAlignment="Right"
                        Margin="0 0 5 0"
